--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -14,11 +14,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-13, macos-14]
+        os: [ubuntu-latest, windows-latest, macos-13] # macos-latest has an issue with nlopt
         # os: [ubuntu-latest, windows-latest, macos-latest]
         # TODO(clairbee): Add pypy versions to the matrix?
         python-version: ["3.10", "3.11", "3.12"]
-        # nlopt often causes problems on Windows or MacOS depending on the specific version
+        # TODO(clairbee): prescrive specific versions since nlopt often causes problems on Windows or MacOS?
         # python-version: ["3.10.11", "3.11.8", "3.12.3"]
     runs-on: ${{ matrix.os }}
     if: "!startsWith(github.event.head_commit.message, 'Version updated')"
@@ -42,21 +42,21 @@ jobs:
 
       # cadquery-ocp hack for MacOS with ARM
       - name: install cadquery-ocp on MacOS (Python 3.10)
-        if: ${{ startsWith(matrix.os, 'macos') && (matrix.python-version == '3.10') }}
+        if: ${{ startsWith(matrix.os, 'macos') && (matrix.os != 'macos-13') && (matrix.python-version == '3.10') }}
         shell: bash
         run: |
           (. .venv/build/${{ env.BIN_DIR }}/activate && python -m pip install https://github.com/jdegenstein/ocp-build-system/releases/download/7.7.2_macos_arm64/cadquery_ocp-7.7.2-cp310-cp310-macosx_11_0_arm64.whl)
           (. .venv/build-cli/${{ env.BIN_DIR }}/activate && python -m pip install https://github.com/jdegenstein/ocp-build-system/releases/download/7.7.2_macos_arm64/cadquery_ocp-7.7.2-cp310-cp310-macosx_11_0_arm64.whl)
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install https://github.com/jdegenstein/ocp-build-system/releases/download/7.7.2_macos_arm64/cadquery_ocp-7.7.2-cp310-cp310-macosx_11_0_arm64.whl)
       - name: install cadquery-ocp on MacOS (Python 3.11)
-        if: ${{ startsWith(matrix.os, 'macos') && (matrix.python-version == '3.11') }}
+        if: ${{ startsWith(matrix.os, 'macos') && (matrix.os != 'macos-13') && (matrix.python-version == '3.11') }}
         shell: bash
         run: |
           (. .venv/build/${{ env.BIN_DIR }}/activate && python -m pip install https://github.com/jdegenstein/ocp-build-system/releases/download/7.7.2_macos_arm64/cadquery_ocp-7.7.2-cp311-cp311-macosx_11_0_arm64.whl)
           (. .venv/build-cli/${{ env.BIN_DIR }}/activate && python -m pip install https://github.com/jdegenstein/ocp-build-system/releases/download/7.7.2_macos_arm64/cadquery_ocp-7.7.2-cp311-cp311-macosx_11_0_arm64.whl)
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install https://github.com/jdegenstein/ocp-build-system/releases/download/7.7.2_macos_arm64/cadquery_ocp-7.7.2-cp311-cp311-macosx_11_0_arm64.whl)
       - name: install cadquery-ocp on MacOS (Python 3.12)
-        if: ${{ startsWith(matrix.os, 'macos') && (matrix.python-version == '3.12') }}
+        if: ${{ startsWith(matrix.os, 'macos') && (matrix.os != 'macos-13') && (matrix.python-version == '3.12') }}
         shell: bash
         run: |
           (. .venv/build/${{ env.BIN_DIR }}/activate && python -m pip install https://github.com/jdegenstein/ocp-build-system/releases/download/7.7.2_macos_arm64/cadquery_ocp-7.7.2-cp312-cp312-macosx_11_0_arm64.whl)
