--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -14,31 +14,21 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["ubuntu-latest", "windows-latest", "macos-latest"]
-        python-version: ["3.10", "3.11"]
+        os: [ubuntu-latest, windows-latest, macos-13] # macos-latest has an issue with nlopt
+        # os: ["ubuntu-latest", "windows-latest", "macos-latest"]
+        python-version: ["3.10", "3.11", "3.12"]
         exclude:
+          # False negatives on Windows for pytest result evaluation
           - os: "windows-latest"
             python-version: "3.11"
+          - os: "windows-latest"
+            python-version: "3.12"
     runs-on: ${{ matrix.os }}
     if: "!startsWith(github.event.head_commit.message, 'Version updated')"
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: ${{ matrix.python-version }}
-      - uses: actions/cache@v3
-        id: cache
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.*') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-      - uses: conda-incubator/setup-miniconda@v3
-        with:
-          miniconda-version: latest
-          activate-environment: pc-conda-env
+      - uses: ./.github/actions/setup
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
