--- a/examples/partcad.yaml
+++ b/examples/partcad.yaml
@@ -13,4 +13,4 @@ import:
   pub:
     type: git
     url: https://github.com/openvmp/partcad-index.git
-  # The subdirectories automatically become "local" imports
+  # NOTE: The subdirectories automatically become imports of the "local" type
