--- a/examples/feature_monorepo/partcad.yaml
+++ b/examples/feature_monorepo/partcad.yaml
@@ -2,6 +2,7 @@ desc: Demonstrates how to create a monorepo with multiple packages in it
 
 import:
   pub:
+    onlyInRoot: True
     type: git
     url: https://github.com/openvmp/partcad-index.git
 
