--- a/partcad/requirements.txt
+++ b/partcad/requirements.txt
@@ -9,7 +9,12 @@ packaging>=23.1
 setuptools
 jinja2
 requests
-google.generativeai
-openai
 aiofiles
 aiohttp
+
+# Google AI
+google.generativeai
+Pillow
+
+# OpenAI
+openai
