Configured the PartCAD package path to open examples in the VS Code extension

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+  "partcad.packagePath": "examples",
+
   "files.trimFinalNewlines": true,
   "files.encoding": "utf8",
   "editor.useTabStops": false,
