--- a/examples/produce_sketch_basic/partcad.yaml
+++ b/examples/produce_sketch_basic/partcad.yaml
@@ -1,3 +1,16 @@
+desc: >
+  This example demonstrates how to create sketches using basic geometric shapes.
+
+docs:
+  usage: |
+    ```shell
+    pc inspect -s circle_01
+    pc inspect -s circle_02
+    pc inspect -s circle_03
+    pc inspect -s square_01
+    pc inspect -s rect_01
+    ```
+
 sketches:
   circle_01:
     type: basic
@@ -20,3 +33,7 @@ sketches:
     rectangle:
       side-x: 5
       side-y: 3
+
+render:
+  readme:
+  svg:
