--- a/examples/produce_part_openscad/partcad.yaml
+++ b/examples/produce_part_openscad/partcad.yaml
@@ -1,9 +1,17 @@
-desc: PartCAD example project to demonstrate parts implemented using SCAD files
+desc: PartCAD example project to demonstrate parts implemented using SCAD files.
+
+docs:
+  usage: |
+    ```shell
+    pc inspect cube
+    ```
+
 parts:
   cube:
     type: scad
     desc: A cube defined in SCAD
+
 render:
+  readme:
   svg:
     prefix: ./
-  markdown: README.md
