--- a/examples/produce_part_stl/partcad.yaml
+++ b/examples/produce_part_stl/partcad.yaml
@@ -1,9 +1,17 @@
-desc: PartCAD example project to demonstrate parts implemented using STL files
+desc: PartCAD example project to demonstrate parts implemented using STL files.
+
+docs:
+  usage: |
+    ```shell
+    pc inspect cube
+    ```
+
 parts:
   cube:
     type: stl
     desc: A cube defined in STL
+
 render:
+  readme:
   svg:
     prefix: ./
-  markdown: README.md
