Moved the template packaging instructions from partcad-cli to partcad, as the files have moved between packages earlier.

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -41,3 +41,10 @@ jobs:
           PYTHONWARNINGS: ignore
         run: |
           pytest -x -p no:error-for-skips
+      - name: Basic integration test for CLI
+        run: |
+          pip install -U ./partcad ./partcad-cli
+          mkdir new_pkg
+          cd new_pkg
+          pc init
+          pc list-all -r
