Generate better READMEs

--- a/examples/produce_part_3mf/partcad.yaml
+++ b/examples/produce_part_3mf/partcad.yaml
@@ -1,4 +1,4 @@
-desc: PartCAD example project to demonstrate parts implemented using 3MF files
+desc: PartCAD example project to demonstrate parts defined using 3MF files
 
 docs:
   usage: |
