--- a/examples/produce_part_extrude/partcad.yaml
+++ b/examples/produce_part_extrude/partcad.yaml
@@ -1,5 +1,5 @@
 desc: >
-  This example demonstrates how to create 3D parts by extruding sketches.
+  This example demonstrates how to define 3D parts by extruding 2D sketches.
 
 docs:
   usage: |
