--- a/examples/produce_part_step/partcad.yaml
+++ b/examples/produce_part_step/partcad.yaml
@@ -1,4 +1,4 @@
-desc: PartCAD example project to demonstrate parts implemented using STEP files.
+desc: PartCAD example project to demonstrate parts defined using STEP files.
 
 docs:
   usage: |
