--- a/examples/produce_part_stl/partcad.yaml
+++ b/examples/produce_part_stl/partcad.yaml
@@ -1,4 +1,4 @@
-desc: PartCAD example project to demonstrate parts implemented using STL files.
+desc: PartCAD example project to demonstrate parts defined using STL files.
 
 docs:
   usage: |
