--- a/examples/produce_sketch_svg/partcad.yaml
+++ b/examples/produce_sketch_svg/partcad.yaml
@@ -1,4 +1,4 @@
-desc: This example demonstrates how to create a sketch using an SVG file.
+desc: This example demonstrates how to define a sketch using an SVG file.
 
 docs:
   usage: |
