--- a/examples/produce_sketch_dxf/partcad.yaml
+++ b/examples/produce_sketch_dxf/partcad.yaml
@@ -1,4 +1,4 @@
-desc: This example demonstrates how to create a sketch using a DXF file.
+desc: This example demonstrates how to define a sketch using a DXF file.
 
 docs:
   usage: |
