Enable relative package path; fix multiple race conditions that become more problemativ when relative paths are used

--- a/examples/partcad.yaml
+++ b/examples/partcad.yaml
@@ -11,6 +11,7 @@
 
 import:
   pub:
+    onlyInRoot: True
     type: git
     url: https://github.com/openvmp/partcad-index.git
   # NOTE: The subdirectories automatically become imports of the "local" type
