--- a/examples/produce_part_extrude/partcad.yaml
+++ b/examples/produce_part_extrude/partcad.yaml
@@ -13,17 +13,17 @@ parts:
   cylinder:
     desc: Extrude a circle sketch to create a cylinder.
     type: extrude
-    sketch: /produce_sketch_basic:circle_01
+    sketch: ../produce_sketch_basic:circle_01
     depth: 1
   dxf:
     desc: Extrude a DXF sketch to create a 3D part.
     type: extrude
-    sketch: /produce_sketch_dxf:dxf_01
+    sketch: ../produce_sketch_dxf:dxf_01
     depth: 10
   clock:
     desc: Extrude a clock sketch to create a 3D clock.
     type: extrude
-    sketch: /produce_sketch_build123d:clock
+    sketch: ../produce_sketch_build123d:clock
     depth: 1
 
 render:
