--- a/partcad/requirements.txt
+++ b/partcad/requirements.txt
@@ -1,6 +1,8 @@
 build123d>=0.5.0
 cadquery>=2.4.0
 numpy>=1.24.1,<2
+nptyping>=1.24.1,<2
+ocp_tesselate
 scipy>=1.11.1
 pyyaml>=6.0.1
 GitPython>=3.1.40
