--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -40,14 +40,11 @@ jobs:
           PYTHONPATH: partcad/src
           PYTHONWARNINGS: ignore
         run: |
-          rm -rf ~/.partcad
-          pip freeze
-          pytest -x -p no:error-for-skips || pip install numpy==1.24.1
-          false
-      # - name: Basic integration test for CLI
-      #   run: |
-      #     pip install -U ./partcad ./partcad-cli
-      #     mkdir new_pkg
-      #     cd new_pkg
-      #     pc init
-      #     pc list-all -r
+          pytest -x -p no:error-for-skips
+      - name: Basic integration test for CLI
+        run: |
+          pip install -U ./partcad ./partcad-cli
+          mkdir new_pkg
+          cd new_pkg
+          pc init
+          pc list-all -r
