--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -35,7 +35,7 @@ jobs:
           pip install -U pytest
           pip install -r partcad/requirements.txt
           # Install a subset of CLI dependencies, that are required for tests
-          pip install svglib
+          pip install svglib rlPyCairo renderlab
           # pip install -r partcad-cli/requirements.txt
       - name: Test with pytest
         env:
